--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,22 @@
    <artifactId>learn-core-java</artifactId>
    <version>1.0-SNAPSHOT</version>
 
+   <properties>
+      <maven.compiler.source>1.7</maven.compiler.source>
+      <maven.compiler.target>1.7</maven.compiler.target>
+   </properties>
+
    <dependencies>
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.11</version>
          <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>com.intellij</groupId>
+         <artifactId>annotations</artifactId>
+         <version>12.0</version>
       </dependency>
    </dependencies>
 
