--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
          <artifactId>annotations</artifactId>
          <version>12.0</version>
       </dependency>
+      <dependency>
+         <groupId>org.hsqldb</groupId>
+         <artifactId>hsqldb</artifactId>
+         <version>2.3.1</version>
+      </dependency>
    </dependencies>
 
 </project>
